# digital_presenter

./: README.md  pyproject.toml
docs/_static/media/Tex/: 0727d15f269afaa5.tex  23ac987072edf2b0.tex  754b0442e933d483.tex
docs/_static/media/videos/partial_movie_files/Creature_Letter_Test/: partial_movie_file_list.txt
docs/_static/media/videos/partial_movie_files/Creature_Test/: partial_movie_file_list.txt
docs/_static/media/videos/partial_movie_files/Decoration_Test/: partial_movie_file_list.txt
docs/_static/media/videos/partial_movie_files/EnhancedTimelineExample/: partial_movie_file_list.txt
docs/_static/media/videos/partial_movie_files/Eye_Test/: partial_movie_file_list.txt
docs/_static/media/videos/partial_movie_files/Rot_Test/: partial_movie_file_list.txt
docs/_static/media/videos/partial_movie_files/Test/: partial_movie_file_list.txt
docs/_static/media/videos/partial_movie_files/Timeline_Test/: partial_movie_file_list.txt
examples/: example.py  manim.cfg  old_examples.py
src/manim_digital_presenter/: __init__.py  my_imports.py
src/manim_digital_presenter/animation/: __init__.py  movement.py  script.py  tbox_script.py  timeline.py
src/manim_digital_presenter/presenter/: __init__.py  creature.py  eyes.py
src/manim_digital_presenter/script_controller/: __init__.py  beeper.py  loader.py  sequencer.py  tbox.py  timeline.py
