[build-system]
build-backend = "hatchling.build"
requires = ["hatchling", "hatch-fancy-pypi-readme"]

[project]
authors = [{name = "PanoPepino", email = "panizofisico@gmail.com"}]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Graphics",
  "Operating System :: OS Independent",
]
dependencies = [
  "manim>=0.18",
  "numpy>=2.0.2",
  "pybtex>=0.23.0",
]
description = "Package to create and use 2D animated creatures in Manim libraries"
dynamic = ["readme", "version"]
keywords = ["manim", "digital_creature", "animation", "presenter"]
license = "MIT"
license-files = ["LICENSE*"]  # Glob pattern for license files
name = "manim_digital_presenter"
requires-python = ">=3.11"

[project.optional-dependencies]
docs = [
  "furo>= 2024.8.6",
  "sphinx>= 7.4.7",
]

[project.urls]
Homepage = "https://panopepino.github.io/digital_creature/"
Documentation = "https://panopepino.github.io/digital_creature/"
Repository = "https://github.com/PanoPepino/digital_creature"

[tool.hatch.version]
path = "src/manim_digital_presenter/__version__.py"

[tool.ruff.lint]
extend-ignore = []
extend-select = [
  "D",  # Documentation lints
  "I",  # Isort
  "TID",  # https://docs.astral.sh/ruff/rules/relative-imports/
]
isort = {known-first-party = ["beanim"]}

[tool.uv]
dev-dependencies = [
  "digital_presenter[docs]",
  "pre-commit>=3.5.0",
]
